<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lucky_sevens_background">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/helpTopBar"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="@color/lucky_sevens_surface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationContentDescription="@string/action_navigate_back"
        app:navigationIcon="@drawable/ic_arrow_back_toolbar"
        app:title="@string/help_title"
        app:titleCentered="true"
        app:titleTextColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/helpCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/lucky_sevens_surface_light"
        app:cardCornerRadius="28dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/helpTopBar">

        <WebView
            android:id="@+id/helpWebView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/help_webview_description"
            android:overScrollMode="never"
            android:scrollbarStyle="insideOverlay"
            tools:ignore="WebViewLayout" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>


